--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,4 +1,13 @@
 steps:
+- name: python
+    entrypoint: pip
+    args: [ "install", "google-cloud-secret-manager", "--user" ]
+
+- name: python
+  entrypoint: python
+  args: [ "load_settings.py", download , $PROJECT_NUMBER ]
+  id: load_settings_toml
+    `
 - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
   args:
   - gcloud
