--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -20,5 +20,6 @@ steps:
   - --source=src
   - --trigger-http
   - --runtime=python39
+  - --allow-unauthenticated
 options:
   logging: CLOUD_LOGGING_ONLY
